# acts

./: CMakeLists.txt
Core/include/Acts/MagneticField/: InterpolatedBFieldMap.hpp
Core/src/Geometry/: LayerCreator.cpp
Core/src/Vertexing/: FullBilloirVertexFitter.cpp
Examples/Algorithms/: CMakeLists.txt
Examples/Algorithms/SHiP/: CMakeLists.txt  LinkDef.h
Examples/Algorithms/SHiP/include/ActsExamples/SHiP/: HGCBuilder.hpp  HGCDetector.hpp  HelperFunctions.hpp  RecoTrack.hpp  RecoVertex.hpp  SHiPDetectorElement.hpp  SHiPFieldProvider.hpp  SHiPMeasurementProvider.hpp  SHiPSeeder.hpp  SeedToParams.hpp  StrawtubeBuilder.hpp  StrawtubeDetector.hpp
Examples/Algorithms/SHiP/src/: HGCBuilder.cpp  HGCDetector.cpp  RecoTrack.cpp  RecoVertex.cpp  SHiPDetectorElement.cpp  SHiPFieldProvider.cpp  SHiPMeasurementProvider.cpp  SHiPSeeder.cpp  SeedToParams.cpp  StrawtubeBuilder.cpp  StrawtubeDetector.cpp
Examples/Algorithms/TrackFitting/src/: TrackFittingAlgorithm.cpp
Examples/Detectors/MagneticField/: CMakeLists.txt
Examples/Detectors/MagneticField/include/ActsExamples/MagneticField/: FieldMapRootIo.hpp
Examples/Detectors/MagneticField/src/: FieldMapRootIo.cpp
Examples/Detectors/TGeoDetector/: CMakeLists.txt
Examples/Detectors/TGeoDetector/include/ActsExamples/TGeoDetector/: MTCBuilder.hpp  ShipDetectorElement.hpp  SiTargetBuilder.hpp  StrawtubeBuilder.hpp
Examples/Detectors/TGeoDetector/src/: MTCBuilder.cpp  ShipDetectorElement.cpp  SiTargetBuilder.cpp  StrawtubeBuilder.cpp
Examples/Io/Root/: CMakeLists.txt
Examples/Io/Root/include/ActsExamples/Io/Root/: SHiPTrackWriter.hpp
Examples/Io/Root/src/: SHiPTrackWriter.cpp  SHiPVertexWriter.cpp
Examples/Python/: CMakeLists.txt
Examples/Python/python/acts/examples/: __init__.py
Examples/Python/src/: Base.cpp  Detector.cpp  EventData.cpp  Geometry.cpp  MagneticField.cpp  ModuleEntry.cpp  RootInput.cpp  RootOutput.cpp  SHiP.cpp
cmake/: ActsConfig.cmake.in
